fix: Files.readString